# wolt-delivery-telegram-bot

./: .gitattributes  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: docker.yml  pre-commit.yml  tests.yml
config/: config.example.toml  config.toml
src/: logging_setup.py  main.py  restaurant_scraper.py  settings.py  telegram_notify.py
tests/integration/: test_find_first_toml.py
tests/unit/: test_nothing.py
